syntax = "proto3";

option go_package = "pb";

service DomainEvents {
  rpc InsertDomainEvent (InsertDomainEventRequest) returns (InsertDomainEventResponse) {}
  rpc Scan(stream ScanRequest) returns (stream ScanResponse) {}
}

message InsertDomainEventRequest {
  string type = 1;
  bytes data = 2;
}

message InsertDomainEventResponse {}

message ScanRequest {
  uint32 pointer = 1;
  int64 after = 2;
}

message ScanResponse {
  int64 id = 1;
  bytes data = 2;
  int64 date = 3;
}